--- a/static/stat220/Day3.Rmd
+++ b/static/stat220/Day3.Rmd
@@ -116,7 +116,7 @@ class: middle
 
 - R uses object-oriented programming (OOP) principles
 - Functions in R are designed to work with specific object classes and types
-- Example: plot() function behaves differently based on the input object
+- Example: `plot()` function behaves differently based on the input object
 
 ]
 
@@ -142,7 +142,7 @@ plot(my_lm)  # Produces diagnostic plots for the linear model
 
 
 .bq.font90[
-- The plot() function adapts its behavior based on the input object's class and type
+- The `plot()` function adapts its behavior based on the input object's class and type
 - This allows for efficient and intuitive coding in R
 ]
 
@@ -160,8 +160,8 @@ class: middle
 
 - Two functions to examine objects:
 
-  - typeof(): Returns the storage mode (data type) of an object
-  - class(): Provides further description of an object
+  - `typeof()`: Returns the storage mode (data type) of an object
+  - `class()`: Provides further description of an object
   
 - NULL: Represents an empty object (vector of length 0)
 ]
@@ -367,7 +367,7 @@ class: middle
 
 # Logical Vectors coercion
 
-.bql[Logical values coerced into 0 for `FALSE` and 1 for `TRUE` when applying math functions]
+.bql[Logical values coerced into 0 for .b[FALSE] and 1 for .b[TRUE] when applying math functions]
 
 ```{r}
 x <- c(8, 2, 1, 3)
@@ -670,7 +670,7 @@ class: action, middle
 .pull-right-60[
 <br>
 .bq.font80[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=39491)
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
 - Get the class activity 3 file
 - Please work on the problems 
 - Talk to your neighbor or ask me questions
