--- a/public/stat120/Day6.Rmd
+++ b/public/stat120/Day6.Rmd
@@ -66,7 +66,7 @@ theme_set(theme_tufte(base_size = 10))
 yt <- 0
 
 # read.csv("https://raw.githubusercontent.com/deepbas/statdatasets/main/APM_DougEvansCases.csv")
-
+# renderthis::to_pdf(from = "Day4.html", complex_slides = TRUE, partial_slides = TRUE)
 ```
 
 
@@ -113,7 +113,9 @@ background-size: 160px, 100% 100%
 
 --
 
-.bql[
+<br>
+
+.bq.font80[
 A .bold[scatterplot] is the plot of $(x_i, y_i)$.
 - form? linear or non-linear
 - direction? positive, negative, no association
@@ -144,6 +146,8 @@ A .bold[scatterplot] is the plot of $(x_i, y_i)$.
  
 --
 
+<br>
+
 .bql[    
 .bold[negative association:] as $x$ increases, $y$ decreases
 - number of cigarettes smoked per day and lung capacity
@@ -151,6 +155,8 @@ A .bold[scatterplot] is the plot of $(x_i, y_i)$.
 ]
 
 ---
+
+class: middle
 
 # Correlation Coefficients
 
@@ -169,7 +175,6 @@ A .bold[scatterplot] is the plot of $(x_i, y_i)$.
 ]
 
 
---
 
 .pull-right-40[
 <br>
@@ -198,7 +203,7 @@ cor(data$x, data$y)
 
 # Linear Regression
 
-.center.green-h[.bold[Goal:] To find a straight line that best fits the data in a scatterplot]
+.center.blue-h[.b[Goal:] To find a straight line that best fits the data in a scatterplot]
 .bql.font80[
 The estimated regression line is $\hat{y} = a + bx$
 - x is the explanatory variable
@@ -235,22 +240,6 @@ class: middle
 </center>
 ]
 
-
----
-
-class: middle
-
-# Least Squares Line
-
-.bq[
-The Least squares line is the line which minimizes the sum of squared residuals. Want to minimize:
-
-$$\sum_{i=1}^n (y_i - \hat{y}_i)^2 = (y_1 - \hat{y}_1)^2 + (y_2 - \hat{y}_2)^2 + \cdots + (y_n - \hat{y}_n)^2 $$
-]
-
-.center[“least squares line” = “regression line”]
-
-
 ---
 
 class: middle
@@ -269,7 +258,7 @@ class: middle
 
 class: middle
 
-# Outliers Detection
+# Presence of Outliers 
 
 
 .pull-left-40[
@@ -304,11 +293,9 @@ abline(sat.lm)
 abline(sat.lm.noIO, col = "red")
 legend("topleft", legend = c("With IN and OH", "Without IN and OH"), col = c("black", "red"), lty = c(1,1), cex = 0.7)
 text(540, 535, "OH", ces = 0.5)
-text(500, 495, "IN", cex = 0.5)
+text(500, 495, "IN", cex = 0.5)# Load necessary libraries
 ```
-
 ]
-
 
 ---
 
@@ -325,13 +312,13 @@ class: action
 <br>
 .bq[
 
-Go to our class [moodle](https://moodle.carleton.edu) and skim through class activity 1
+Go to our class [moodle](https://moodle.carleton.edu) and skim through the class activity 
 
 Feel free to talk to your neighbor
 ]
 ]
 
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+`r countdown(minutes = 3, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
 ---
 
@@ -343,7 +330,7 @@ bac <- read.csv("http://math.carleton.edu/kstclair/data/BAC.csv")
 
 .pull-left-60[
 
-Regression of BAC on number of beers
+.hljs[Regression of BAC on number of beers]
 
 .code70[
 ```{r}
@@ -356,7 +343,7 @@ summary(bac.lm)
 .pull-right-40[
 <br>
 <br>
-.bqt.font80[
+.bq.font80[
 Slope, $b= 0.0180$: 
 
 - `Estimate` column and `Beers` row
@@ -370,7 +357,6 @@ Intercept, $a = -0.0127$:
 
 ---
 
-class: middle
 
 # Regressing BAC on number of beers
 
@@ -422,7 +408,6 @@ abline(bac.lm) # adds regression line
 
 ---
 
-class: middle
 
 # Regressing BAC on number of beers
 
@@ -513,15 +498,14 @@ ggplot(d, aes(x = Beers, y = residuals)) +
 ---
 
 # R-squared
-.bqt.font80[
+.bql[
 .bold[R-squared] is proportion (or percentage) of variability observed in the response y which can be explained by the explanatory variable x.
-
-$$R^2 = 1 - \text{unexplained variation} = 1 - \frac{s^{2}_{\text{residuals}}}{s^2_y} $$
 ]
 
-- $R^2 = r^2$ in simple linear regression model (One explanatory variable)
+.hljs[
+$R^2 = r^2$ in simple linear regression model (One explanatory variable)]
 
-.bql.font80[
+.bq.font90[
 .bold[BAC] : $R^2 = 0.7998$
 
 - The number of beers consumed explains about 80.0% of the observed variation in BAC
@@ -537,7 +521,7 @@ class: middle
 
 Called .bold[Multiple R-squared] in the summary output
 
-.code100[
+.code80[
 ```{r}
 summary(bac.lm)
 ```
@@ -557,7 +541,7 @@ ggplot(data, aes(x=x,y=y,color=z)) + geom_point()
 
 --
 
-.bqt.font80[
+.bqt.font90[
 - split (subset) data by categories, run regressions for each group.
 - look for outliers that affect the fitted model and correlation
 - fit the model/correlation with and without case(s) to see the affects
@@ -592,7 +576,7 @@ ggplot(salarydata, aes(x=Age,
   geom_point()
 ```
 ]
-.bq[
+.bq.font90[
 - Visually split the data by PhD status
 - Potentially different trends
 ]
@@ -606,7 +590,7 @@ class: middle
 
 .pull-left-60[
 
-```{r, echo = FALSE, fig.align='center', fig.width=4, fig.height=4, out.width="90%"}
+```{r, echo = FALSE, fig.align='center', fig.width=4, fig.height=4, out.width="85%"}
 ggplot(salarydata, aes(x=Age, y=Salary, color=PhD))+
   geom_point() +
   geom_smooth(method ="lm", se=FALSE)+
@@ -628,7 +612,7 @@ Visually infer difference in groups:
 
 # Adding a categorical variable: stats by group
 
-> .green[Can also use `filter` function available under `dplyr` package to divide responses into the groups of interest]
+.bq.font90[Can also use `filter` function available under `dplyr` package to divide responses into the groups of interest]
 
 ```{r}
 library(dplyr)
@@ -673,8 +657,6 @@ summary(sat.lm)$r.squared
 
 ]
 
-
-
 .out-t[Correlation = 0.9732, Regression Slope = 1.0469, R-squared = 94.7%]
 
 ---
@@ -696,57 +678,7 @@ summary(sat.lm.noIO)$r.squared
 ```
 ]
 
-.out-t[Correlation = 0.8465, Regression slope = 0.9956 , R-squared = 71.66%]
-
----
-
-class: middle
-
-# Non-linear Patterns
-
-.bql.font80[.bold[James D. Forbes 1857 experiment:] Can atmospheric pressure be determined from the boiling point of water? Is the relationship linear?]
-
-.pull-left[
-.red.center[Seems Linear!]
-```{r, echo = FALSE, eval=TRUE, fig.align='center', fig.width=4, fig.height=4, out.width="80%"}
-forbes <- read.csv("http://math.carleton.edu/kstclair/data/forbes.csv")
-plot(Pressure ~ Temp, data=forbes, pch=19, main = "Pressure vs. Temp", cex.lab=0.5, cex.main = 0.5, cex.axis=0.5)
-forbes.lm <- lm(Pressure ~ Temp, data=forbes)
-abline(forbes.lm)
-```
-
-]
-
-.pull-right[
-.red.center[Curvature!]
-```{r, echo = FALSE, eval=TRUE, fig.align='center', fig.width=4, fig.height=4, out.width="80%"}
-plot(resid(forbes.lm) ~ Temp, data=forbes, pch=19, main = "Residuals plot", cex.lab=0.5, cex.main = 0.5, cex.axis=0.5)
-abline(h=0)
-```
-
-]
-
----
-
-# Residuals Plot
-
-.bqt.font80[While the scatterplot of pressure vs. temp may look linear
-relationship, the residuals plot reveals that there is curvature in the
-relationship.]
-
---
-
-<br>
-
-.bql.font80[
-Correlation is almost 1, so why not use linear regression!!
-- Because the true nature of the relationship is not linear
-- Would systematically overestimate pressure for midrange temps and underestimate pressure for high/low temps.
-]
-
---
-
-.out-t[However, temp and log(pressure) have a linear relationship and we can apply linear model after transformation of the variables!!]
+.out-t.bold[Correlation = 0.8465, Regression slope = 0.9956 , R-squared = 71.66%]
 
 ---
 
