--- a/public/stat220/Day6.Rmd
+++ b/public/stat220/Day6.Rmd
@@ -107,7 +107,7 @@ class: title-slide, middle
 
 # .fancy[Data wrangling with **dplyr**]
 
-### .fancy[Fall 2022]
+### .fancy[Spring 2023]
 
 `r format(Sys.Date(), ' %B %d %Y')`
 
